derive/tests/ui/attr-invalid-meta-list-names.stderr
error: Invalid attribute parameter(s): 'Xalias'. Expected 'alias'
  --> $DIR/attr-invalid-meta-list-names.rs:8:2
   |
8  |       /// Returns a protocol version
   |  _____^
9  | |     #[rpc(name = "protocolVersion", Xalias("alias"))]
10 | |     fn protocol_version(&self) -> Result<String>;
   | |_________________________________________________^
